@startuml
hide circle
skinparam linetype ortho

entity Administrador {
  +id_admin : INT <<PK>>
  --
  usuario : VARCHAR(100) <<UNIQUE>>
  contrasena : VARCHAR(255)
}

entity Usuario {
  +id_usuario : INT <<PK>>
  --
  nombre_usuario : VARCHAR(100) <<UNIQUE>>
  correo : VARCHAR(150) <<UNIQUE>>
  num_tel : VARCHAR(20)
  contrasena : VARCHAR(255)
}

entity Pelicula {
  +id_pelicula : INT <<PK>>
  --
  titulo : VARCHAR(155)
  anio_salida : VARCHAR(20)
  director : VARCHAR(95)
  resumen : TEXT
  genero : VARCHAR(100)
  disponible : INT
  url_photo : VARCHAR(100)
  valoracion : DECIMAL(3,1)
  precio : DECIMAL(4,2)
}

entity Lista {
  +id_lista : INT <<PK>>
  --
  nombre_lista : VARCHAR(100)
  id_usuario : INT <<FK>>
}

entity Lista_Pelicula {
  +id_lista : INT <<PK, FK>>
  +id_pelicula : INT <<PK, FK>>
}

entity Resena {
  +id_resena : INT <<PK>>
  --
  texto : TEXT
  valoracion : DECIMAL(3,1)
  fecha : DATETIME
  id_usuario : INT <<FK>>
  id_pelicula : INT <<FK>>
}

entity Peliculas_Disponibles {
  +id_pelicula : INT <<PK, FK>>
  --
  id_lista_peliculas_disponibles : INT <<UNIQUE>>
}

entity Alquiler {
  +id_usuario : INT <<PK, FK>>
  +id_pelicula : INT <<PK, FK>>
  --
  fecha_alquiler : DATETIME
  fecha_devolucion : DATETIME
}

entity Peliculas_Vistas {
  +id_usuario : INT <<PK, FK>>
  +id_pelicula : INT <<PK, FK>>
}

entity Peliculas_Favoritas {
  +id_usuario : INT <<PK, FK>>
  +id_pelicula : INT <<PK, FK>>
}

Usuario ||--o{ Lista : tiene
Lista ||--o{ Lista_Pelicula
Pelicula ||--o{ Lista_Pelicula

Usuario ||--o{ Resena
Pelicula ||--o{ Resena

Usuario ||--o{ Alquiler
Pelicula ||--o{ Alquiler

Usuario ||--o{ Peliculas_Vistas
Pelicula ||--o{ Peliculas_Vistas

Usuario ||--o{ Peliculas_Favoritas
Pelicula ||--o{ Peliculas_Favoritas

Pelicula ||--|| Peliculas_Disponibles

@enduml
